--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -1,24 +1,41 @@
-@import url(https://fonts.googleapis.com/css?family=Dancing+Script);
-
-h1 {color: #fff9e6; 
-	font-family: 'Dancing Script', cursive;
-	font-weight: 100; 
-	font-size: 350px;
-	text-align: center;	
-	}
-
-p {text-align: center;
-	font-family: "Helvetica Neue";
-	font-weight: 100;
-	font-size: 50px;
-	color: #ffffff;
-
+header {
+	background-color: #FFED74;
+	border: 1px black solid;
+	padding: 20px;
 }
 
-ul {text-align: center;
-	font-family: "Helvetica Neue";
-	font-weight: 100;
-	font-size: 50px;
-	color: #ffffff;
+nav {
+	background-color: #E8C66A;
+	border: 1px black solid;
+	padding: 20px;
+}
 
+aside {
+	background-color: #FFC675;
+	border: 1px black solid;
+	padding: 20px;
+}
+
+article {
+	background-color: #E89C6C;
+	border: 1px black solid;
+	padding: 20px;
+}
+
+footer {
+	background-color: #FF957E;
+	border: 1px black solid;
+	padding: 20px;
+}
+
+div {
+	background-color: #FFE2B8;
+	border: 1px black solid;
+	padding: 20px;
+}
+
+section {
+	background-color: #FFE2B8;
+	border: 1px black solid;
+	padding: 20px;
 }
